# zeno

./: .gitignore  CNAME  LICENSE.md  README.md  arch.md  debug_log_check.js  package-lock.json  package.json  tsconfig.json  verify_parity_large.ts  wrangler.toml
.wrangler/tmp/bundle-D3U55J/: middleware-loader.entry.ts
.wrangler/tmp/bundle-EstnkX/: middleware-loader.entry.ts
.wrangler/tmp/dev-3CaoSX/: worker.js.map
benchmark/: benchmark.html  zeno.min.js  zeno.wasm  zeno_worker.js
benchmark/assets/: zeno_core-26a7c4c3.js
cloudflare/: package-lock.json  wrangler.toml  zeno.wasm  zeno.wasm.bak
docs/: CNAME  benchmark-test.html  index.md  zeno.min.js  zeno.wasm  zeno_core.js  zeno_worker.js
docs/benchmark/: benchmark.html  zeno.min.js  zeno.wasm  zeno_worker.js
docs/demo/: index.html  zeno_core.js  zeno_worker.js
docs/guide/: alternatives.md  architecture.md  benchmark.md  client.md  community.md  demo.md  deployment.md  effectiveness.md  floating.md  index.md  invisible.md  server.md  solver.md  standalone.md  widget.md  workings.md
scripts/: apply_pkg_licenses.py  prepare_deploy.mjs  sanitize_wasm.mjs  sync_artifacts.mjs
src/client/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
src/core/: Cargo.toml
src/core/src/: bqf.rs  crypto.rs  lib.rs  solver.rs
src/core/tests/: e2e_flow.rs
src/server/: package-lock.json  package.json  tsconfig.json  wrangler.toml
test/: debug_solve.mjs
test/e2e/: README.md  full_api_test.mjs  index.html  index_original.html  repro_solver.mjs  test_runner.mjs  test_suite.html
(+73 files in other folders)
