[package]
name = "zeno-core"
version = "0.1.0"
edition = "2021"
description = "Core cryptographic library for Zeno, implementing Cuckatoo Cycle and Class Group VDFs."
authors = ["Erez Kalman <kaerez@gmail.com>"]
license = "PolyForm-Strict-1.0.0"
homepage = "https://kalman.co.il"
repository = "https://github.com/zeno-security/zeno"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
num-bigint = { version = "0.4", features = ["rand", "serde"] }
num-integer = "0.1"
num-traits = "0.2"
sha2 = "0.10"
siphasher = "0.3"
hex = "0.4"
getrandom = { version = "0.2", features = ["js"] }
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.4"
serde_json = "1.0"
js-sys = "0.3"

[dev-dependencies]